--- a/sis/style.css
+++ b/sis/style.css
@@ -101,7 +101,7 @@ padding: 15px;
 
 body {
     background-color: #6b92b9;
-    background-image: url('/sis/img/snow.png'), url('/sis/img/snow3.png'), url('/sis/img/snow2.png');
+    background-image: url('/sis/snow.png'), url('/sis/snow3.png'), url('/sis/snow2.png');
     -webkit-animation: snow 20s linear infinite;
     -moz-animation: snow 20s linear infinite;
     -ms-animation: snow 20s linear infinite;
